<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CoolWeather</string>
    <string name="welcome">Welcome! Choose a City…</string>
    <string name="error_city_not_found">Error: city not found, please try another ☀</string>
    <string name="error_banned">Error: please check your internet connection and try again</string>
    <string name="ForecastDescription">🌺 Sunny skies all day long ☀</string>
    <string name="settingsTitle">Settings</string>
    <string name="cityInput">Please, insert or choose a city…</string>
    <string name="show_extra_details">Also show…</string>
    <string name="humidityTV">"Humidity "</string>
    <string name="humidityUnit" translatable="false">%</string>
    <string name="windTV">"Wind "</string>
    <string name="windUnit">m/s</string>
    <string name="barometerTV">"Barometer "</string>
    <string name="barometerUnit">hpa</string>
    <string name="themeSwitch">Theme</string>
    <string name="pink">pink</string>
    <string name="blue">blue</string>
    <string name="preferencesTitle">Preferences</string>
    <string name="InputErrorMessage">Please insert correct location name</string>
    <string name="checkCityNameRegex" translatable="false">^[A-ZА-Я]{1}[a-zа-я]{2,4}([-a-z-а-я]{0,1})?([,A-ZА-Я]{0,1})?([a-zа-я]{0,9})?([,]{0,1})?( [A-ZА-Я]{1})?([A-Za-zА-Яа-я]{2})?([a-zа-я]{0,1})?([,a-zа-я]{0,1})?([a-zа-я]{0,5})?([,]{0,1})?( [A-ZА-Я]{1})?([A-Za-zА-Яа-я]{1,2})?([a-zа-я]{0,3})?$</string>
    <string name="ok">Apply</string>
    <string name="forecast">Forecast</string>
    <string name="preferences">Preferences</string>
    <string name="feels_like">Feels like…</string>
    <string name="please_wait">Please wait…</string>
    <string name="load_background_from_web">load background from web</string>
    <string name="defaultBackgroundUrl" tools:ignore="TypographyDashes">https://avatars.mds.yandex.net/get–pdb/223663/abc94791-b45b-4b17-b481-31593649786d/s1200</string>
    <string name="_24_hour_5_days">24 h / 5 days</string>
</resources>
