<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">


    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/settingsTitle"
        android:textAllCaps="true"
        android:textSize="@dimen/TitleTextSize"
        app:layout_constraintEnd_toStartOf="@id/applyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ok_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/whiteTransparent"
        android:padding="@dimen/padding"
        android:showText="true"
        android:switchPadding="16dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/themeSwitch"
        android:textAlignment="gravity"
        android:textOff="@string/pink"
        android:textOn="@string/blue"
        android:textSize="@dimen/DefaultTextSize"
        android:thumbTextPadding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applyButton"
        tools:checked="false"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>
