<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".View.SensorsFragment">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:fontFamily="@font/finger_paint"
        android:textSize="@dimen/TextSizeTitle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/temperatureSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/TextSizeTitle"
        android:textStyle="bold"
        tools:text="17°C" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidityTV"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humiditySensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="77" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidityUnit"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>